# SC2Switcher-Standalone

./: CMakeLists.txt  Config.cpp  Config.h  FileScoreWriter.cpp  FileScoreWriter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Observer.h  README.md  SC2Data.cpp  SC2State.cpp  ScoreTracker.cpp  ScoreTracker.h  ScoreWriter.h  Webhook.cpp  Webhook.h  main.cpp
jansson/include/: jansson_config.h
